@@ -12,9 +12,15 @@ displays=default-display
 # Display configuration
 #
 # session = Default session
+# xdmcp-manager = XDMCP manager to connect to
+# xdmcp-port = XDMCP UDP/IP port to communicate on
+# key = Authentication key to use
 #
 [default-display]
-session=gnome
+#session=gnome
+#xdmcp-manager=
+#xdmcp-port=177
+#key=0x0123456789ABCD
 
 #
 # Greeter configuration
