@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.0.5
 
     * Make --test-mode which runs as the current user
+    * Support displays acting as XDMCP terminals
 
 Overview of changes in lightdm 0.0.4
 
